# gopie

./: .air.toml  .dockerignore  .env.example  .gitignore  .goreleaser.yml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.testing  README.md  auth_bblot.db  companion.env.example  config-noauth.env.example  config.env.example  docker-compose-noauth.yaml  docker-compose.yaml  docker-compose.yml  flake.nix  go.mod  go.sum  goose.env  goose.json  main.go  nginx.conf  pyproject.toml  readme.md  requirements.txt  sqlc.yaml
chat-server/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  docker-compose.yaml  docker-compose.yml  litellm_config.yaml  pyproject.toml
chat-server/app/: main.py
chat-server/app/core/: config.py  constants.py  langchain_config.py  log.py  session.py  system_prompt.py
chat-server/app/models/: chat.py  data.py  message.py  openai_compatibility.py  provider.py  query.py  router.py  schema.py
chat-server/app/services/google/: google_access_token.py
chat-server/app/services/gopie/: dataset_info.py  generate_schema.py  sql_executor.py
chat-server/app/services/qdrant/: get_schema.py  qdrant_setup.py  schema_search.py  schema_vectorization.py  vector_store.py
chat-server/app/tests/e2e/: multi_dataset_cases.py  test_e2e_script.ipynb
chat-server/app/tests/unit/: conftest.py  pytest.ini  test_dataset_upload.py  test_gateway_providers.py  test_model_registry.py  test_openai_adapters.py  test_prompts.py  (+2 more)
chat-server/app/tool_utils/: tool_node.py
chat-server/app/tools/: __init__.py  execute_sql_query.py  generate_visualisation.py  get_table_schema.py  list_datasets.py  plan_sql_query.py
chat-server/app/utils/: prompts.py
chat-server/docs/: docker.md  docs.md
chat-server/gateways/litellm/: docker-compose.yml  litellm_config.yaml
chat-server/gateways/portkey/: docker-compose.yml
chat-server/google/: dummy.json
chat-server/graph/: graph.mmd
chat-server/tests/: README.md  conftest.py
chat-server/tests/e2e/: conftest.py  dataset_test_cases.py  multi_dataset_cases.py  single_dataset_cases.py  terminal_formatter.py  test_e2e_script.py  test_e2e_script_clean.py  test_upload_schema.py  test_utils.py  visualization_cases.py
chat-server/tests/unit/: test_dataset_upload.py  test_embedding_providers.py  test_llm_providers.py  test_model_registry.py  test_openai_adapters.py  test_prompts.py  test_vector_store.py
server/: .air.toml  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile-sp  Dockerfile.migrate  Dockerfile.reindex  go.mod  go.sum  pyproject.toml  sqlc.yaml
server/app/: main.py
server/app/core/: config.py  langchain_config.py  session.py  system_prompt.py
server/app/models/: chat.py  data.py  event.py  message.py  provider.py  query.py  router.py  schema.py  types.py
server/app/services/: dataset_info.py  dataset_profiling.py  qdrant_client.py  schema_fetcher.py
server/app/tools/: __init__.py  describe_table.py  get_table_schema.py  list_datasets.py  sql_executor.py  tool_node.py
server/app/utils/: col_desc_generator.py  col_description_generator.py  column_value_matching.py  correct_column_values.py  dataset_info.py  generate_graph.py  model_provider.py  model_selector.py  sql_executor.py
server/application/repositories/: ai.go  aiagent.go  database_source.go  download.go  olap.go  source.go  store.go
server/application/services/: ai.go  aiagent.go  chat.go  database_source.go  download.go  olap.go  store.go
server/docs/: docs.go  swagger.json  swagger.yaml
server/domain/: error.go
server/domain/cmd/: reindex_schemas.go  root.go  serve.go  starter_project.go
server/domain/models/: aiagent.go  chat.go  dataset.go  dataset_summary.go  download.go  olap.go  pagination.go  postgres.go  project.go  utils.go
server/domain/pkg/: sqlparser.go  sqlparser_test.go  utils.go
server/duckdb/: gopie.db.wal
server/infrastructure/aiagent/: aiagent.go  chat.go  delete_schema.go  upload_schema.go
server/infrastructure/download/: create.go  delete.go  details.go  download.go  list.go
server/infrastructure/duckdb/: driver.go  parser.go
server/infrastructure/meterus/: meterus.go
server/infrastructure/openai/: openai.go
server/infrastructure/portkey/: portkey.go
server/infrastructure/s3/: s3.go
server/infrastructure/zitadel/: interceptor.go
server/interfaces/http/: api_server.go  serve.go  server.go  server_params.go  web_app_server.go
server/starter-project-datasets/: Mortality rate, under-5 (per 1,000 live births)_Source WB Group .csv
(+919 files in other folders)
