[project]
name = "dataful-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.2.1",
  "fastapi[standard]>=0.115.12",
  "langchain>=0.3.21",
  "langchain-community>=0.3.20",
  "langchain-openai>=0.3.9",
  "langchain-qdrant>=0.2.0",
  "langgraph>=0.3.18",
  "logging>=0.4.9.6",
  "pandas>=2.2.3",
  "portkey-ai>=1.11.1",
  "pydantic>=2.10.6",
  "python-dotenv>=1.0.1",
  "qdrant-client>=1.13.3",
  "ydata-profiling>=4.15.1",
]
