[project]
description = "A multidataset-SQL agent for Dataful"
name = "dataful-agent"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi[standard]>=0.115.12",
  "langchain>=0.3.21",
  "langchain-community>=0.3.20",
  "langchain-openai>=0.3.9",
  "langchain-qdrant>=0.2.0",
  "langgraph>=0.3.18",
  "logging>=0.4.9.6",
  "pandas>=2.2.3",
  "portkey-ai>=1.11.1",
  "pydantic>=2.10.6",
  "python-dotenv>=1.0.1",
  "qdrant-client>=1.13.3",
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
   .eggs
  | .git
  | .venv
  | .eggs
  | .cache
  | __pycache__
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
combine_as_imports = true
known_first-party = ["app"]

[tool.flake8]
max-line-length = 79
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  ".mypy_cache",
  ".pytest_cache",
  ".tox",
]
select = ["E", "W", "F", "C", "B", "N"]
ignore = ["E203", "W503"]
